- fix bug #37945 pathinfo() cannot handle argument with special characters   like german "Umlaute"